# t_inv_rag

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
main/src/: main.py
strategies/src/application/: types.py
ta/src/: __init__.py  _imports.py  ma.py  utils.py
ta/src/candle/: cd_invertedhammer.py  cdl_2crows.py  cdl_3blackcrows.py  cdl_3inside.py  cdl_3linestrike.py  cdl_3outside.py  cdl_3starsinsouth.py  cdl_3whitesoldiers.py  cdl_abandonedbaby.py  cdl_advanceblock.py  cdl_belthold.py  cdl_breakway.py  cdl_closingmarubozu.py  cdl_concealbabyswall.py  cdl_counterattack.py  cdl_darkcloudcover.py  cdl_doji.py  cdl_dojistar.py  cdl_dragonflydoji.py  cdl_engulfing.py  cdl_eveningdojistar.py  cdl_eveningstar.py  cdl_gapsidesidewhite.py  cdl_gravestonedoji.py  cdl_hammer.py  cdl_hangingman.py  cdl_harami.py  cdl_haramicross.py  cdl_highwave.py  cdl_hikkake.py  cdl_hikkakemod.py  cdl_homingpigeon.py  cdl_identical3crows.py  cdl_inneck.py  cdl_inside.py  cdl_kicking.py  cdl_kickingbylength.py  cdl_ladderbottom.py  cdl_longleggeddoji.py  cdl_longline.py  (+27 more)
ta/src/custom/: __init__.py  avsl.py  ott.py  rsi_clouds.py  scrsi.py
ta/src/market_structure/: __init__.py  avs_base.py  avsr.py  market_structure.py
ta/src/momentum/: __init__.py  ao.py  apo.py  bias.py  bop.py  brar.py  cci.py  cfo.py  cg.py  cmo.py  coppock.py  crsi.py  macd.py  roc.py  rsi.py  stochf.py  stochrsi.py
ta/src/overlap/: __init__.py  alligator.py  ema.py  hilo.py  hlc3.py  linreg.py  midpoint.py  pivots.py  pwma.py  rma.py  sma.py  ssf.py  ssf3.py  supertrend.py  t3.py  tema.py  (+4 more)
(+61 files in other folders)
